--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
-  <img src="images/banner.jpg" alt="Banner Image" class="banner-image">
+  <img src="banner.jpg" alt="Banner Image" class="banner-image">
   <section class="hero">
     <h1 class="headline">I’M AKASH DHANWATE</h1>
     <p class="subtext">AI & DS Student | Web Developer | Tech Explorer</p>
     
     <!-- Add your image here -->
-    <img src="images/profile.jpeg" alt="Akash Dhanwate" class="profile-img">
+    <img src="profile.jpeg" alt="Akash Dhanwate" class="profile-img">
 
     <div class="buttons">
       <a href="https://in.linkedin.com/in/4kashdhanwate" target="_blank" class="btn">LinkedIn</a>
