--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h3 id="popupTitle" class="text-xl font-semibold mb-3">Complete Your Purchase</h3>
       <p class="mb-3">Scan the QR or pay via UPI:</p>
       <img src="pay.jpg" alt="UPI QR" class="w-40 mx-auto mb-3">
-      <p class="mb-3"><strong>UPI ID:</strong> 8766885083@ybl</p>
+      <p class="mb-3"><strong>UPI ID:</strong> 8766885083-2@ybl</p>
       <p class="text-sm text-gray-500">After payment, send screenshot + email to <strong>learnaids2025@gmail.com</strong> for instant access.</p>
     </div>
   </div>
